test-cases/final-dump/badmodname.wybe
module a {
    pub module b {
        !print("in a.b")
    }
}
module `a.b` {
    !print("in `a.b`")
}
pass